# LuckyWallet

./: README.md  test2.txt
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py
backend/app/core/: __init__.py  security.py
backend/app/models/: audit_log.py  user.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py
backend/scripts/: create_admin.py  how_to_start.md
backend/tests/: test_security.py
docs/: color design.md  how_to_start.md  提交和分支命名规范.md
frontend/: package-lock.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js
frontend/src/auth/: AuthContext.jsx  ProtectedRoute.jsx  useAuth.js
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  NotFoundPage.jsx
frontend/src/styles/: colors.css
sql/: 001_init_luckywallet.sql
