[project]
name = "luckywallet-backend"
version = "0.1.0"
description = "LuckyWallet FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "pydantic-settings>=2.7",
  "pwdlib[argon2]>=0.2",
  "PyJWT>=2.10",
  "pymysql>=1.1",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
